--- a/index.html
+++ b/index.html
@@ -2527,6 +2527,10 @@
                     <input type="text" id="name" class="form-control" required>
                 </div>
                 <div class="form-group">
+                    <label for="company">Название вашей компании</label>
+                    <input type="text" id="company" class="form-control">
+                </div>
+                <div class="form-group">
                     <label for="phone">Телефон</label>
                     <input type="tel" id="phone" class="form-control" required>
                 </div>
