--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -1648,19 +1648,19 @@
                                     </tr>
                                     <tr>
                                         <td>Жизнеспособность (23±2°C), мин.</td>
-                                        <td>35 ± 10</td>
+                                        <td>27 ± 10</td>
                                     </tr>
                                     <tr>
                                         <td>Твердость по Шору А через 24 часа</td>
-                                        <td>≥ 45</td>
+                                        <td>≥ 42</td>
                                     </tr>
                                     <tr>
                                         <td>Условная прочность в момент разрыва, МПа</td>
-                                        <td>≥ 0,8</td>
+                                        <td>≥ 0,65</td>
                                     </tr>
                                     <tr>
                                         <td>Относительное удлинение в момент разрыва, %</td>
-                                        <td>≥ 120</td>
+                                        <td>≥ 59</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -1998,9 +1998,7 @@
                     </div>
                     <div class="region-body">
                         <div class="region-info">
-                            <p><i class="fas fa-building"></i> <strong>Филиал ООО "ФауБеХа-Сиб"</strong></p>
-                            <p><i class="fas fa-map-marker-alt"></i> г. Томск, ул. Фрунзе, 111, офис 305</p>
-                        </div>
+                            <p><i class="fas fa-building"></i> <strong>Филиал ООО "ФауБеХа1</div>
                         <div class="region-contacts">
                             <p><i class="fas fa-mobile-alt"></i> моб.: +7 913-849-50-01</p>
                         </div>
